# yt-transcript-extractor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/as-is-to-be-analyzer/: SKILL.md
.claude/skills/as-is-to-be-analyzer/references/: output-template.md
.claude/skills/branch-diff-analyzer/: SKILL.md
.claude/skills/branch-diff-analyzer/references/: output-template.md
.claude/skills/c4-context-architect/: SKILL.md
.claude/skills/c4-context-architect/references/: output-template.md
.claude/skills/prd-generator/: SKILL.md
.claude/skills/sequence-diagram-architect/: SKILL.md
docs/: architecture.md  prd-v2.md  sequence-diagram-transcript-extraction.md  tasks.md  usage-guide.md
src/study/: __main__.py
src/study/ai/: __init__.py  api_backend.py  base.py  cli_backend.py  prompts.py  schemas.py
src/study/cli/: ingest.py  main.py  process.py  transcript.py
src/study/core/: config.py  models.py  state.py  utils.py
src/study/obsidian/: channel_note.py  concept_note.py  frontmatter.py  vault.py  video_note.py
src/study/transcript/: extractor.py  parser.py  storage.py
src/yt_transcript_extractor/: __init__.py  __main__.py  cli.py  config.py  downloader.py  parser.py  utils.py
tests/: conftest.py  test_api_backend.py  test_channel_note.py  test_cli.py  test_cli_backend.py  test_concept_note.py  test_config.py  test_downloader.py  test_extractor.py  test_frontmatter.py  test_integration.py  test_models.py  test_parser.py  test_schemas.py  test_state.py  test_storage.py  test_utils.py  test_vault.py  test_video_note.py
(+2 files in other folders)
