[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-extractor"
version = "0.1.0"
description = "Extract transcripts from YouTube videos without downloading them"
requires-python = ">=3.10"
dependencies = ["yt-dlp>=2024.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
yt-transcript-extractor = "yt_transcript_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
